# dprox-app

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: compiled_plan.example.yml  config.dev.yml  config.example.yml
scripts/: dev_certs.py  smoke_mtls.py  verify_release.py
src/dprox/: __init__.py  __main__.py  audit.py  cli.py  config.py  mtls.py  ollama.py  plan.py  qdrant.py  server.py  version.py
tests/: cert_helpers.py  conftest.py  test_audit.py  test_cli.py  test_config.py  test_mtls.py  test_ollama.py  test_plan.py  test_qdrant.py  test_query.py  test_skeleton.py
